--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@pinia/nuxt": "^0.4.6",
     "cors": "^2.8.5",
+    "loadtest": "^5.2.0",
     "pinia": "^2.0.28"
   }
 }
