--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,6 +12,7 @@ click-repl==0.2.0
 Django==4.1.4
 django-celery-results==2.4.0
 django-cors-headers==3.13.0
+django-extensions==3.2.1
 django-redis==5.2.0
 djangorestframework==3.14.0
 flower==1.2.0
