--- a/.gitignore
+++ b/.gitignore
@@ -311,4 +311,4 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-!backend/logs/*
+!./backend/logs/*
