--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 version: '3.8'
- 
+
 services:
   backend:
     build:
@@ -11,6 +11,7 @@ services:
     command: >
       sh -c "python3 manage.py wait_for_db &&
              python3 manage.py migrate &&
+             python3 manage.py test > ./logs/test.log &&
              python3 manage.py runserver 0.0.0.0:8000"
 
     env_file:
