--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,32 +4,51 @@ async-timeout==4.0.2
 billiard==3.6.4.0
 celery==5.2.7
 certifi==2022.12.7
+cffi==1.15.1
 charset-normalizer==2.1.1
 click==8.1.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
+coreapi==2.3.3
+coreschema==0.0.4
+cryptography==39.0.0
+defusedxml==0.7.1
 Django==4.1.4
 django-celery-results==2.4.0
 django-cors-headers==3.13.0
 django-extensions==3.2.1
 django-redis==5.2.0
+django-templated-mail==1.1.1
 djangorestframework==3.14.0
+djangorestframework-simplejwt==4.8.0
+djoser==2.1.0
 flower==1.2.0
 greenlet==2.0.1
 humanize==4.4.0
 idna==3.4
+itypes==1.2.0
+Jinja2==3.1.2
 kombu==5.2.4
+MarkupSafe==2.1.2
+oauthlib==3.2.2
 prometheus-client==0.15.0
 prompt-toolkit==3.0.36
+psycopg2-binary==2.9.5
+pycparser==2.21
+PyJWT==2.6.0
+python3-openid==3.2.0
 pytz==2022.7
 redis==4.4.0
 requests==2.28.1
+requests-oauthlib==1.3.1
 six==1.16.0
+social-auth-app-django<5.0.0, >=4.0.0
+social-auth-core==4.3.0
 SQLAlchemy==1.4.45
 sqlparse==0.4.3
 tornado==6.2
+uritemplate==4.1.1
 urllib3==1.26.13
 vine==5.0.0
 wcwidth==0.2.5
-psycopg2-binary==2.9.5
