--- a/oauth/Dockerfile
+++ b/oauth/Dockerfile
@@ -4,8 +4,10 @@ ENV PYTHONUNBUFFERED=1
 
 WORKDIR /oauth
 
-COPY . .
+COPY . /oauth
+
+RUN pip install --no-cache-dir -r oauth.requirements.txt
 
 EXPOSE 8001
 
-CMD ['python3', 'manage.py', 'runserver', '8001']
+CMD ["python", "manage.py", "runserver", "0.0.0.0:8001"]
