--- a/oauth/Dockerfile
+++ b/oauth/Dockerfile
@@ -10,4 +10,8 @@ RUN pip install --no-cache-dir -r oauth.requirements.txt
 
 EXPOSE 8001
 
+CMD ["python", "manage.py", "makemigrations"]
+
+CMD ["python", "manage.py", "migrate"]
+
 CMD ["python", "manage.py", "runserver", "0.0.0.0:8001"]
