--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -18,6 +18,7 @@ Django==4.1.4
 django-celery-results==2.4.0
 django-cors-headers==3.13.0
 django-extensions==3.2.1
+django-oauth-toolkit==2.2.0
 django-redis==5.2.0
 django-templated-mail==1.1.1
 djangorestframework==3.14.0
